--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,103 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
 local.properties
+
+# Log files
+*.log
+
+# Android Studio files
+.idea/
+*.iml
+*.ipr
+
+# Keystore files
+*.jks
+
+# Android specific files
+*.apk
+*.ap_
+*.dex
+*.class
+*.so
+*.jar
+*.war
+*.ear
+*.hprof
+
+# External native build folder generated in Android Studio 2.2+
+.externalNativeBuild
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# IntelliJ
+out/
+*.iws
+*.idea/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Gradle caches
+**/build/
+**/captures/
+**/outputs/
+**/generated/
+
+# Local configuration files
+.idea/caches
+.idea/libraries
+.idea/modules.xml
+.idea/workspace.xml
+.idea/navEditor.xml
+.idea/assetWizardSettings.xml
+.idea/misc.xml
+.idea/gradle.xml
+.idea/xml/
+
+# Gradle Wrapper files
+gradle-wrapper.jar
+gradle-wrapper.properties
+
+# Temporary files
+*.swp
+*.tmp
+*.temp
+*.orig
+
+# Project-specific files
+.vscode/
+.env
+
+# Ignore Google Analytics for Firebase and Firebase Crashlytics
+firebase_analytics_report/
+crashlytics/
+
+# Ignore generated files
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+xcuserdata/
+project.xcworkspace/
+*.xcuserstate
+*.lock
+
+# Android Studio 3.1+ generated files
+.idea/copyright/profiles_settings.xml
+.idea/copyright/
+.idea/codeStyles/
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/inspectionProfiles/
+.idea/markdown_navigator.xml
+.idea/scopes/
+.idea/vcs.xml
+.idea/codeStyles/Project.xml
+
+# macOS files
+*.DS_Store
